--- a/LeetCodePractice/LeetCodePractice.vcxproj
+++ b/LeetCodePractice/LeetCodePractice.vcxproj
@@ -110,6 +110,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Leetcode_1.cpp" />
+    <ClCompile Include="Leetcode_35.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
