--- a/LeetCodePractice/LeetCodePractice.vcxproj.filters
+++ b/LeetCodePractice/LeetCodePractice.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="Leetcode_35.cpp">
       <Filter>Source Files\Array</Filter>
     </ClCompile>
+    <ClCompile Include="LeetCode_66.cpp">
+      <Filter>Source Files\Array</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode_26.cpp">
+      <Filter>Source Files\Array</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
