--- a/LeetCodePractice/LeetCodePractice.vcxproj
+++ b/LeetCodePractice/LeetCodePractice.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E5F97169-6BDA-45AE-B84D-908F46F097F0}</ProjectGuid>
     <RootNamespace>LeetCodePractice</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -118,6 +118,7 @@
     <ClCompile Include="LeetCode_66.cpp" />
     <ClCompile Include="LeetCode_7.cpp" />
     <ClCompile Include="LeetCode_88.cpp" />
+    <ClCompile Include="LeetCode_9.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
