--- a/LeetCodePractice/LeetCodePractice.vcxproj
+++ b/LeetCodePractice/LeetCodePractice.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Leetcode_1.cpp" />
+    <ClCompile Include="LeetCode_13.cpp" />
     <ClCompile Include="LeetCode_26.cpp" />
     <ClCompile Include="LeetCode_27.cpp" />
     <ClCompile Include="Leetcode_35.cpp" />
