--- a/LeetCodePractice/LeetCodePractice.vcxproj.filters
+++ b/LeetCodePractice/LeetCodePractice.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="LeetCode_9.cpp">
       <Filter>Source Files\Math</Filter>
     </ClCompile>
+    <ClCompile Include="LeetCode_13.cpp">
+      <Filter>Source Files\Math</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
