--- a/LeetCodePractice/LeetCodePractice.vcxproj.filters
+++ b/LeetCodePractice/LeetCodePractice.vcxproj.filters
@@ -13,43 +13,46 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Array">
-      <UniqueIdentifier>{4fce879e-4ccb-4d58-95e6-911ac12ebf5e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Math">
-      <UniqueIdentifier>{0a7278fa-c79f-4a60-a3c5-93c9f3c3de77}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LeetCode_88.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Leetcode_1.cpp">
-      <Filter>Source Files\Array</Filter>
-    </ClCompile>
-    <ClCompile Include="Leetcode_35.cpp">
-      <Filter>Source Files\Array</Filter>
-    </ClCompile>
-    <ClCompile Include="LeetCode_66.cpp">
-      <Filter>Source Files\Array</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LeetCode_26.cpp">
-      <Filter>Source Files\Array</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LeetCode_27.cpp">
-      <Filter>Source Files\Array</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Leetcode_35.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LeetCode_53.cpp">
-      <Filter>Source Files\Array</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LeetCode_88.cpp">
-      <Filter>Source Files\Array</Filter>
+    <ClCompile Include="LeetCode_66.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LeetCode_7.cpp">
-      <Filter>Source Files\Math</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LeetCode_9.cpp">
-      <Filter>Source Files\Math</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LeetCode_13.cpp">
-      <Filter>Source Files\Math</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode_14.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode_20.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode_21.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
