--- a/LeetCodePractice/LeetCodePractice.vcxproj.filters
+++ b/LeetCodePractice/LeetCodePractice.vcxproj.filters
@@ -54,5 +54,14 @@
     <ClCompile Include="LeetCode_21.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LeetCode_28.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode_38.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LeetCode_58.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
